<resources>
    <string name="app_name">SerialBasics</string>
    <string name="statusRequest">Status Request</string>
    <string name="statusNoteiro">Status Noteiro</string>
    <string name="clear">CLEAR</string>
    <string name="tag">TAG</string>
    <string name="sendOn">Send\nOn</string>
    <string name="sendOff">Send\nOff</string>
    <string name="receiveOn">Receive\nOn</string>
    <string name="receiveOff">Receive\nOff</string>

    <string name="noteiroOn">Noteiro\nOn</string>
    <string name="noteiroOff">Noteiro\nOff</string>
    <string name="noteiroReset">Noteiro\nReset</string>
    <string name="noteiroQuestion">Noteiro\nQuestion</string>

</resources>
